# Culinary-Canvas

./: README.md  answers.txt  pyproject.toml
category/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
core/: celery.py  jazzmin_conf.py  settings.py  urls.py
recipes/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
templates/: index.html
users/: admin.py  manager.py  models.py  tasks.py  urls.py  utils.py
users/migrations/: 0001_initial.py
users/serializers/: user.py
users/tasks/: __init__.py
users/views/: __init__.py  register.py  user.py
